--- a/privacy.htm
+++ b/privacy.htm
@@ -179,16 +179,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-3-31-free-clash.htm" title="3月31日→20.3M/S|2025年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐">3月31日→20.3M/S|2025年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-68697.htm" title="Pycharm运行Flask项目指定运行参数">Pycharm运行Flask项目指定运行参数</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-7-clash-v2ray-ss-ssr.htm" title="3月7日→18.3M/S|2025年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址，便宜机场推荐">3月7日→18.3M/S|2025年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-67421.htm" title="动物疫苗多少钱一支啊图片高清视频（动物疫苗的作用）">动物疫苗多少钱一支啊图片高清视频（动物疫苗的作用）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-25-free-high-speed-nodes.htm" title="3月25日→22.1M/S|2025年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐">3月25日→22.1M/S|2025年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-82168.htm" title="医院妇产科领养孩子送房子（医院妇产科领养孩子送房子可以吗）">医院妇产科领养孩子送房子（医院妇产科领养孩子送房子可以吗）</a></li>
-                        <li class="py-2"><a href="/news/article-71310.htm" title="动物医院的英文名叫什么（动物医院英语翻译）">动物医院的英文名叫什么（动物医院英语翻译）</a></li>
+                        <li class="py-2"><a href="/news/article-86468.htm" title="动物医院注册资金最低（动物医院注册资金最低多少）">动物医院注册资金最低（动物医院注册资金最低多少）</a></li>
+                        <li class="py-2"><a href="/news/article-68698.htm" title="宠物医疗许可证多少钱（宠物医疗许可证多少钱办）">宠物医疗许可证多少钱（宠物医疗许可证多少钱办）</a></li>
+                        <li class="py-2"><a href="/news/article-80085.htm" title="妙三多和猫三联价格是多少（妙三多和猫三联是疫苗的名字吗）">妙三多和猫三联价格是多少（妙三多和猫三联是疫苗的名字吗）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-21-clash-node.htm" title="3月21日→19.4M/S|2025年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐">3月21日→19.4M/S|2025年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-86466.htm" title="SSM三大框架工作流程与原理详解">SSM三大框架工作流程与原理详解</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-3-20-free-clash-subscribe.htm" title="3月20日→18M/S|2025年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址，便宜机场推荐">3月20日→18M/S|2025年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-69987.htm" title="动物疫苗去哪里买比较好 动物疫苗去哪里买比较好一点">动物疫苗去哪里买比较好 动物疫苗去哪里买比较好一点</a></li>
-                        <li class="py-2"><a href="/news/article-87173.htm" title="动物疫苗接种时间查询app（动物疫苗批号查询）">动物疫苗接种时间查询app（动物疫苗批号查询）</a></li>
+                        <li class="py-2"><a href="/news/article-68055.htm" title="动物疫苗使用时的注意事项有哪些内容 动物疫苗使用时的注意事项有哪些内容呢">动物疫苗使用时的注意事项有哪些内容 动物疫苗使用时的注意事项有哪些内容呢</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-26-clash-v2ray-ss-ssr.htm" title="3月26日→19.9M/S|2025年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址，便宜机场推荐">3月26日→19.9M/S|2025年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-73289.htm" title="动物疫苗厂家排名前十有哪些品种 动物疫苗厂家排名前十有哪些品种的">动物疫苗厂家排名前十有哪些品种 动物疫苗厂家排名前十有哪些品种的</a></li>
+                        <li class="py-2"><a href="/news/article-71972.htm" title="动物疫苗接种时间表（动物 疫苗）">动物疫苗接种时间表（动物 疫苗）</a></li>
                     </ul>
     </div>
 </div>
@@ -200,7 +200,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">87</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
@@ -221,15 +221,17 @@
 				<a href="#ban" class="scroll"><img src="/assets/website/img/clashgithub/arrow.png" alt=" " class="img-responsive" /></a>
 			</div>
             <div class="col-lg-8 footer-left">
-                            <p>
-                                <a href="/">首页</a> | 
-                                <a href="/free-node/">免费节点</a> | 
-                                <a href="/news/">新闻资讯</a> |
-                                <a href="/about-us.htm">关于我们</a> |
-                                <a href="/disclaimer.htm">免责申明</a> |
-                                <a href="/privacy.htm">隐私申明</a> |
-                                <a href="/sitemap.xml">网站地图</a>
-                            </p>
+                                    <p>
+                                                <a href="/">首页</a> |
+                                                <a href="/free-nodes/">免费节点</a> |
+                                                <a href="/paid-subscribe/">推荐机场</a> |
+                                                <a href="/client.htm">客户端</a> |
+                                                <a href="/news/">新闻资讯</a> |
+                                                <a href="/about-us.htm">关于我们</a> |
+                        <a href="/disclaimer.htm">免责申明</a> |
+                        <a href="/privacy.htm">隐私申明</a> |
+                        <a href="/sitemap.xml">网站地图</a>
+                    </p>
                 <p class="m-0">Clash Github官方机场站 版权所有</p>
             </div>
 			<div class="copy-right-social1">
