--- a/about-us.htm
+++ b/about-us.htm
@@ -141,16 +141,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-3-17-free-v2ray-subscribe.htm" title="3月17日→21.1M/S|2025年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐">3月17日→21.1M/S|2025年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-79393.htm" title="无货源网店怎么发货操作流程（无货源网店怎么发货操作流程图）">无货源网店怎么发货操作流程（无货源网店怎么发货操作流程图）</a></li>
-                        <li class="py-2"><a href="/news/article-72622.htm" title="动物打防疫针多少钱啊（动物防疫***收费吗）">动物打防疫针多少钱啊（动物防疫***收费吗）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-7-clash-v2ray-ss-ssr.htm" title="3月7日→18.3M/S|2025年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址，便宜机场推荐">3月7日→18.3M/S|2025年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-31-free-clash.htm" title="3月31日→20.3M/S|2025年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐">3月31日→20.3M/S|2025年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-66160.htm" title="Java中的字符串常量池是什么？">Java中的字符串常量池是什么？</a></li>
+                        <li class="py-2"><a href="/news/article-68697.htm" title="Pycharm运行Flask项目指定运行参数">Pycharm运行Flask项目指定运行参数</a></li>
                         <li class="py-2"><a href="/news/article-75990.htm" title="兰州狗狗市场（兰州市的狗市场在哪）">兰州狗狗市场（兰州市的狗市场在哪）</a></li>
-                        <li class="py-2"><a href="/news/article-78703.htm" title="上海宠物医院收费标准2020标准（上海 宠物 医院）">上海宠物医院收费标准2020标准（上海 宠物 医院）</a></li>
-                        <li class="py-2"><a href="/news/article-80787.htm" title="饲料加盟免费代理多少钱（饲料加盟免费代理多少钱啊）">饲料加盟免费代理多少钱（饲料加盟免费代理多少钱啊）</a></li>
-                        <li class="py-2"><a href="/news/article-81482.htm" title="猫三联一共几针,间隔多久打第二针好（猫三联每针间隔多久打一次）">猫三联一共几针,间隔多久打第二针好（猫三联每针间隔多久打一次）</a></li>
-                        <li class="py-2"><a href="/news/article-79392.htm" title="国内十大猫粮品牌排行榜对比（国内知名猫粮品牌）">国内十大猫粮品牌排行榜对比（国内知名猫粮品牌）</a></li>
+                        <li class="py-2"><a href="/news/article-85028.htm" title="宠物用品批发进货渠道宠物用品优选倔强的尾巴（宠物用品批发商）">宠物用品批发进货渠道宠物用品优选倔强的尾巴（宠物用品批发商）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-13-free-clash.htm" title="3月13日→22M/S|2025年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址，便宜机场推荐">3月13日→22M/S|2025年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/news/article-74621.htm" title="uni-app 条件编译">uni-app 条件编译</a></li>
+                        <li class="py-2"><a href="/news/article-73289.htm" title="动物疫苗厂家排名前十有哪些品种 动物疫苗厂家排名前十有哪些品种的">动物疫苗厂家排名前十有哪些品种 动物疫苗厂家排名前十有哪些品种的</a></li>
+                        <li class="py-2"><a href="/news/article-68698.htm" title="宠物医疗许可证多少钱（宠物医疗许可证多少钱办）">宠物医疗许可证多少钱（宠物医疗许可证多少钱办）</a></li>
+                        <li class="py-2"><a href="/news/article-71971.htm" title="狗粮生产机器设备有哪些（狗粮生产机器设备有哪些品牌）">狗粮生产机器设备有哪些（狗粮生产机器设备有哪些品牌）</a></li>
                     </ul>
     </div>
 </div>
@@ -162,7 +162,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">87</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
@@ -183,15 +183,17 @@
 				<a href="#ban" class="scroll"><img src="/assets/website/img/clashgithub/arrow.png" alt=" " class="img-responsive" /></a>
 			</div>
             <div class="col-lg-8 footer-left">
-                            <p>
-                                <a href="/">首页</a> | 
-                                <a href="/free-node/">免费节点</a> | 
-                                <a href="/news/">新闻资讯</a> |
-                                <a href="/about-us.htm">关于我们</a> |
-                                <a href="/disclaimer.htm">免责申明</a> |
-                                <a href="/privacy.htm">隐私申明</a> |
-                                <a href="/sitemap.xml">网站地图</a>
-                            </p>
+                                    <p>
+                                                <a href="/">首页</a> |
+                                                <a href="/free-nodes/">免费节点</a> |
+                                                <a href="/paid-subscribe/">推荐机场</a> |
+                                                <a href="/client.htm">客户端</a> |
+                                                <a href="/news/">新闻资讯</a> |
+                                                <a href="/about-us.htm">关于我们</a> |
+                        <a href="/disclaimer.htm">免责申明</a> |
+                        <a href="/privacy.htm">隐私申明</a> |
+                        <a href="/sitemap.xml">网站地图</a>
+                    </p>
                 <p class="m-0">Clash Github官方机场站 版权所有</p>
             </div>
 			<div class="copy-right-social1">
