--- a/date/2025-03/page-6.htm
+++ b/date/2025-03/page-6.htm
@@ -272,16 +272,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-3-15-free-high-speed-nodes.htm" title="3月15日→22.7M/S|2025年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址，便宜机场推荐">3月15日→22.7M/S|2025年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-87173.htm" title="动物疫苗接种时间查询app（动物疫苗批号查询）">动物疫苗接种时间查询app（动物疫苗批号查询）</a></li>
-                        <li class="py-2"><a href="/news/article-86468.htm" title="动物医院注册资金最低（动物医院注册资金最低多少）">动物医院注册资金最低（动物医院注册资金最低多少）</a></li>
-                        <li class="py-2"><a href="/news/article-84300.htm" title="给宠物医院的好评怎么写文案（宠物医院大众优质好评怎么写）">给宠物医院的好评怎么写文案（宠物医院大众优质好评怎么写）</a></li>
-                        <li class="py-2"><a href="/news/article-68697.htm" title="Pycharm运行Flask项目指定运行参数">Pycharm运行Flask项目指定运行参数</a></li>
-                        <li class="py-2"><a href="/news/article-71309.htm" title="哈尔滨王福军宠物医院（哈尔滨爱福宠物医院）">哈尔滨王福军宠物医院（哈尔滨爱福宠物医院）</a></li>
                         <li class="py-2"><a href="/news/article-73289.htm" title="动物疫苗厂家排名前十有哪些品种 动物疫苗厂家排名前十有哪些品种的">动物疫苗厂家排名前十有哪些品种 动物疫苗厂家排名前十有哪些品种的</a></li>
-                        <li class="py-2"><a href="/news/article-78016.htm" title="猫养小猫要多长时间（小猫养多久才能生小猫）">猫养小猫要多长时间（小猫养多久才能生小猫）</a></li>
+                        <li class="py-2"><a href="/news/article-78702.htm" title="宠物领养协议有法律效力吗多少钱合适呢（宠物领养协议具有法律效应吗）">宠物领养协议有法律效力吗多少钱合适呢（宠物领养协议具有法律效应吗）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-3-clash-node-daily-updates.htm" title="4月3日→18.5M/S|2025年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址，便宜机场推荐">4月3日→18.5M/S|2025年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-4-shadowrocket-node.htm" title="3月4日→22.9M/S|2025年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址，便宜机场推荐">3月4日→22.9M/S|2025年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-69986.htm" title="Shell常用脚本：Nginx安装脚本">Shell常用脚本：Nginx安装脚本</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-11-node-share.htm" title="3月11日→22.3M/S|2025年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址，便宜机场推荐">3月11日→22.3M/S|2025年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-16-free-high-speed-nodes.htm" title="3月16日→21.6M/S|2025年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址，便宜机场推荐">3月16日→21.6M/S|2025年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-3-12-shadowrocket-node.htm" title="3月12日→21.2M/S|2025年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址，便宜机场推荐">3月12日→21.2M/S|2025年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-73288.htm" title="厦门猫咪领养吧 厦门猫咪领养吧百度贴吧">厦门猫咪领养吧 厦门猫咪领养吧百度贴吧</a></li>
+                        <li class="py-2"><a href="/news/article-87174.htm" title="宠物狗粮在哪里买比较好一点（狗粮去哪买比较好）">宠物狗粮在哪里买比较好一点（狗粮去哪买比较好）</a></li>
+                        <li class="py-2"><a href="/news/article-78703.htm" title="上海宠物医院收费标准2020标准（上海 宠物 医院）">上海宠物医院收费标准2020标准（上海 宠物 医院）</a></li>
                     </ul>
     </div>
 </div>
@@ -293,7 +293,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">87</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
@@ -312,15 +312,17 @@
 				<a href="#ban" class="scroll"><img src="/assets/website/img/clashgithub/arrow.png" alt=" " class="img-responsive" /></a>
 			</div>
             <div class="col-lg-8 footer-left">
-                            <p>
-                                <a href="/">首页</a> | 
-                                <a href="/free-node/">免费节点</a> | 
-                                <a href="/news/">新闻资讯</a> |
-                                <a href="/about-us.htm">关于我们</a> |
-                                <a href="/disclaimer.htm">免责申明</a> |
-                                <a href="/privacy.htm">隐私申明</a> |
-                                <a href="/sitemap.xml">网站地图</a>
-                            </p>
+                                    <p>
+                                                <a href="/">首页</a> |
+                                                <a href="/free-nodes/">免费节点</a> |
+                                                <a href="/paid-subscribe/">推荐机场</a> |
+                                                <a href="/client.htm">客户端</a> |
+                                                <a href="/news/">新闻资讯</a> |
+                                                <a href="/about-us.htm">关于我们</a> |
+                        <a href="/disclaimer.htm">免责申明</a> |
+                        <a href="/privacy.htm">隐私申明</a> |
+                        <a href="/sitemap.xml">网站地图</a>
+                    </p>
                 <p class="m-0">Clash Github官方机场站 版权所有</p>
             </div>
 			<div class="copy-right-social1">
