--- a/free-nodes/2025-4-3-clash-node-daily-updates.htm
+++ b/free-nodes/2025-4-3-clash-node-daily-updates.htm
@@ -145,6 +145,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 <p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p><p>&nbsp;</p><p></p><h2>订阅链接</h2><p>&nbsp;</p><p><strong>clash订阅链接</strong></p><p>https://clashgithub.github.io/uploads/2025/04/0-20250403.yaml</p><p>https://clashgithub.github.io/uploads/2025/04/1-20250403.yaml</p><p>https://clashgithub.github.io/uploads/2025/04/2-20250403.yaml</p><p>https://clashgithub.github.io/uploads/2025/04/3-20250403.yaml</p><p>https://clashgithub.github.io/uploads/2025/04/4-20250403.yaml</p><p>&nbsp;</p><p><strong>v2ray订阅链接:</strong></p><p>https://clashgithub.github.io/uploads/2025/04/0-20250403.txt</p><p>https://clashgithub.github.io/uploads/2025/04/2-20250403.txt</p><p>https://clashgithub.github.io/uploads/2025/04/3-20250403.txt</p><p>https://clashgithub.github.io/uploads/2025/04/4-20250403.txt</p><p><strong>sing-box订阅链接</strong></p><p>https://clashgithub.github.io/uploads/2025/04/20250403.json</p><p>&nbsp;</p><p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="http://xianyuwangluo.top/#/register?code=" data-type="Xianyu" data-code="j5kX2iZI" rel="nofollow noopener" style="color:#c00;">闲鱼网络</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>                <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
                                         <p>上一个：<a href="/free-nodes/2025-4-1-free-ssr-subscribe.htm">4月1日→19.6M/S|2025年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址，便宜机场推荐</a></p>
+                                        <p>下一个：<a href="/free-nodes/2025-4-4-free-clash.htm">4月4日→20.5M/S|2025年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址，便宜机场推荐</a></p>
                                     </div>
                                 <div class="panel panel-default mt-5">
                     <div class="panel-heading">
@@ -173,16 +174,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-82889.htm" title="动物医院环评如何办理（宠物医院环评选址要求）">动物医院环评如何办理（宠物医院环评选址要求）</a></li>
-                        <li class="py-2"><a href="/news/article-71972.htm" title="动物疫苗接种时间表（动物 疫苗）">动物疫苗接种时间表（动物 疫苗）</a></li>
-                        <li class="py-2"><a href="/news/article-75303.htm" title="动物疫苗需要每年都打吗多少钱（动物疫苗需要每年都打吗多少钱）">动物疫苗需要每年都打吗多少钱（动物疫苗需要每年都打吗多少钱）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-5-node-share-links.htm" title="3月5日→18.8M/S|2025年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐">3月5日→18.8M/S|2025年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-85029.htm" title="十大进口猫粮排行2018（十大进口猫粮排行2018年）">十大进口猫粮排行2018（十大进口猫粮排行2018年）</a></li>
+                        <li class="py-2"><a href="/news/article-88633.htm" title="HTML5画布 canvas移动">HTML5画布 canvas移动</a></li>
+                        <li class="py-2"><a href="/news/article-65524.htm" title="隐藏滚动条适用于各个浏览器">隐藏滚动条适用于各个浏览器</a></li>
+                        <li class="py-2"><a href="/news/article-73288.htm" title="厦门猫咪领养吧 厦门猫咪领养吧百度贴吧">厦门猫咪领养吧 厦门猫咪领养吧百度贴吧</a></li>
+                        <li class="py-2"><a href="/news/article-78015.htm" title="南京宠物领养中心在哪个位置好（南京宠物领养中心在哪个位置好点）">南京宠物领养中心在哪个位置好（南京宠物领养中心在哪个位置好点）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-11-node-share.htm" title="3月11日→22.3M/S|2025年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址，便宜机场推荐">3月11日→22.3M/S|2025年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-30-node-share-links.htm" title="3月30日→19.3M/S|2025年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址，便宜机场推荐">3月30日→19.3M/S|2025年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/news/article-73955.htm" title="Git基础Commit对象">Git基础Commit对象</a></li>
-                        <li class="py-2"><a href="/news/article-71971.htm" title="狗粮生产机器设备有哪些（狗粮生产机器设备有哪些品牌）">狗粮生产机器设备有哪些（狗粮生产机器设备有哪些品牌）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-10-free-ssr-subscribe.htm" title="3月10日→20.9M/S|2025年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐">3月10日→20.9M/S|2025年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-68054.htm" title="动物医院主管部门是什么 动物医院主管部门是什么部门">动物医院主管部门是什么 动物医院主管部门是什么部门</a></li>
-                        <li class="py-2"><a href="/news/article-67420.htm" title="宠物粮进货平台有哪些（宠物粮进货平台有哪些品牌）">宠物粮进货平台有哪些（宠物粮进货平台有哪些品牌）</a></li>
+                        <li class="py-2"><a href="/news/article-86468.htm" title="动物医院注册资金最低（动物医院注册资金最低多少）">动物医院注册资金最低（动物医院注册资金最低多少）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-7-clash-v2ray-ss-ssr.htm" title="3月7日→18.3M/S|2025年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址，便宜机场推荐">3月7日→18.3M/S|2025年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-68697.htm" title="Pycharm运行Flask项目指定运行参数">Pycharm运行Flask项目指定运行参数</a></li>
                     </ul>
     </div>
 </div>
@@ -194,7 +195,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">16</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">87</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
@@ -215,15 +216,17 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 				<a href="#ban" class="scroll"><img src="/assets/website/img/clashgithub/arrow.png" alt=" " class="img-responsive" /></a>
 			</div>
             <div class="col-lg-8 footer-left">
-                            <p>
-                                <a href="/">首页</a> | 
-                                <a href="/free-node/">免费节点</a> | 
-                                <a href="/news/">新闻资讯</a> |
-                                <a href="/about-us.htm">关于我们</a> |
-                                <a href="/disclaimer.htm">免责申明</a> |
-                                <a href="/privacy.htm">隐私申明</a> |
-                                <a href="/sitemap.xml">网站地图</a>
-                            </p>
+                                    <p>
+                                                <a href="/">首页</a> |
+                                                <a href="/free-nodes/">免费节点</a> |
+                                                <a href="/paid-subscribe/">推荐机场</a> |
+                                                <a href="/client.htm">客户端</a> |
+                                                <a href="/news/">新闻资讯</a> |
+                                                <a href="/about-us.htm">关于我们</a> |
+                        <a href="/disclaimer.htm">免责申明</a> |
+                        <a href="/privacy.htm">隐私申明</a> |
+                        <a href="/sitemap.xml">网站地图</a>
+                    </p>
                 <p class="m-0">Clash Github官方机场站 版权所有</p>
             </div>
 			<div class="copy-right-social1">
